[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["kiccho1101 <youodf11khp@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.0"
pandas = "^1.3.5"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^4.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
